Salesforce-LWC learnings/force-app/main/default/objects/Employee__c/fields/Performance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Performance_Rating__c</fullName>
    <description>Custom Data Type in Datatable</description>
    <label>Performance Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exceeds Expectations</fullName>
            </value>
            <value>
                <fullName>Above Expectations</fullName>
            </value>
            <value>
                <fullName>Meets Expectations</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory</fullName>
            </value>
            <value>
                <fullName>Not Rated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>